# Online-Mart-Project

./: README.md  docker-compose.yaml  kong_setup_routes.sh  temp.py
microservices/: compose.yaml
microservices/inventory-service/: .env
microservices/inventory-service/app/: main.py  settings.py  (+1 more)
microservices/notification-service/: .env  pyproject.toml
microservices/order-service/: .env
microservices/payment-service/: .env  pyproject.toml
microservices/product-service/: .env  Dockerfile.dev  pyproject.toml
microservices/product-service/app/: main.py  settings.py  user.proto
microservices/product-service/app/handlers/: category_crud.py  product_crud.py
microservices/product-service/app/models/: product_models.py
microservices/product-service/app/routes/: category_crud_routes.py  product_crud_routes.py
microservices/product-service/tests/: test_product_crud_routes.py  test_tabnine.py
microservices/user-service/: .env  pyproject.toml
microservices/user-service/app/: main.py  settings.py  testkafka.py  utils.py
microservices/user-service/app/db/: db_connection.py
microservices/user-service/app/handlers/: admin_auth.py  auth_handlers.py  kong_handlers.py  user_auth.py  user_crud.py
microservices/user-service/app/models/: admin_models.py  user_models.py
microservices/user-service/app/routes/: admin_auth_routes.py  user_auth_routes.py  user_routes.py
microservices/user-service/tests/: test_user_crud.py
microservices/user-service/tests/user-service/: test_admin_auth_routes.py  test_auth_handlers.py  test_user_auth_routes.py  test_user_routes.py
(+29 files in other folders)
